syntax = "proto3";

package ir;

option go_package = "pkg/ir";

message Program {
    repeated PortInfo ports = 1;
    repeated Connection net = 2;
    repeated Func funcs = 3;
}

message PortInfo {
    PortAddr portAddr = 1;
    uint32 bufSize = 2;
}

message PortAddr {
    string path = 1;
    string port = 2;
    uint32 idx = 3;
}

message Connection {
    PortAddr senderSide = 1;
    repeated ReceiverConnectionSide receiverSides = 2;
}

message ReceiverConnectionSide {
    PortAddr portAddr = 1;
    repeated string selectors = 2;
}

message Func {
    FuncRef ref = 1;
    FuncIO io = 2;
    Msg params = 3;
}

message FuncRef {
    string pkg = 1;
    string name = 2;
}

message FuncIO {
    repeated PortAddr in = 1;
    repeated PortAddr out = 2;
}

message Msg {
    MsgType type = 1;
    bool bool = 2;
    int64 int = 3;
    double float = 4;
    string str = 5;
}

enum MsgType {
    Unknown = 0;
    Bool = 1;
    Int = 2;
    Float = 3;
    Str = 4;
}
